# GTestCMakeQuickstart

./: CMakeLists.txt  Warning.txt
